test/libsolidity/syntaxTests/storageLayoutSpecifier/abi_decode.sol
contract C layout at abi.decode(abi.encode(42), (uint)) {}
// ----
// TypeError 6396: (21-55): The base slot of the storage layout must evaluate to a rational number.
